Encoding added